alignmentation corrected

--- a/src/components/VM/VM.css
+++ b/src/components/VM/VM.css
@@ -8,12 +8,13 @@
 .vm-individual {
   display: flex;
   gap: 15px;
+  align-items: flex-start;
 }
-.vm-individual h2 {
+.vm-content-wrapper h2 {
   font-size: 40px;
   font-weight: 500;
 }
-.vm-individual p {
+.vm-content-wrapper p {
   font-size: 20px;
 }
 .vm-svg {
@@ -24,6 +25,13 @@
   align-items: center;
   padding: 15px;
 }
+.vm-content-wrapper{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  text-align: left;
+}
+
 
 @media screen and (max-width: 1450px) {
   .vm-wrapper {
@@ -32,10 +40,10 @@
   }
 }
 @media screen and (max-width: 970px) {
-  .vm-individual h2 {
+  .vm-content-wrapper h2 {
     font-size: 35px;
   }
-  .vm-individual p {
+ .vm-content-wrapper p {
     font-size: 16px;
   }
 }
